--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	                </div>
 	                <div class="col-sm-3">
 	                	<h3>Excepteur</h3>
-        				  	<img class="images/python.png" alt="python">
+        				  	<img class="project-img img-responsive img-square" src="images/python.png" alt="python">
 		                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 	                </div>
 	                <div class="col-sm-3">
